# GSA_RT

./: .gitignore  CMakeLists.txt  README.md
GSA_RT/: CMakeLists.txt  GSA_RT.cpp
GSA_RT/src/: CMakeLists.txt  Core.cpp  Core.hpp  Renderer.cpp  Renderer.hpp  Utils.cpp  Utils.hpp
GSA_RT/src/primitives/: Ray.cpp  Ray.hpp  Sphere.cpp  Sphere.hpp
